fix(web-components): align the end component to match label
top align end component to match label. change stories so that icon button is small

--- a/packages/web-components/src/components/ic-data-row/ic-data-row.css
+++ b/packages/web-components/src/components/ic-data-row/ic-data-row.css
@@ -7,7 +7,7 @@
 
 .data {
   display: flex;
-  align-items: center;
+  align-items: top;
 }
 
 .text-cells {
